--- a/happy_pets/package.json
+++ b/happy_pets/package.json
@@ -9,9 +9,12 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@mui/system": "^5.8.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
