--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "eslint": "^8.17.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -49,7 +51,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
